# OCR-Rename

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  SCRIPT_GUIDE.txt  install.ps1  install.sh  pyproject.toml  requirements.txt  run.bat  run.command  run.sh  setup.bat  setup.command  setup.sh  start.bat  start.command  项目指南.md
.github/workflows/: build-windows-exe.yml  release-windows-exe.yml
Release/: README.md  build_portable.py  build_windows_exe.bat  build_windows_exe.py  exe_entry.py
doc/: QR码识别优化方案.md  使用指南.md  开发文档.md
input/: PUT_IMAGES_HERE.txt
src/: __init__.py  __main__.py  arbitration.py  barcode.py  batch_rename.py  config.py  models.py  ocr.py  orientation.py  pair.py  pipeline.py  qrcode_scan.py  scan_log.py  utils.py
tests/: test_pipeline.py
